# htop-ui

./: Cargo.toml  config_example.yaml  deleteme.rs
src/: main.rs
src/app/: config.rs  mod.rs
src/cmd/: disk.rs  mod.rs  network.rs  process.rs  temperature.rs  utils.rs
