[package]
name = "htop-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
indexmap = "2.10.0"
log = "0.4.27"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
simple_logger = "5.0.0"
sysinfo = "0.36.1"
tokio = { version = "1.47.1", features = ["full"] }
